# gcheck_test

./: LICENSE  README.md  pyproject.toml  requirements.txt
Formula/: gcheck.rb
gcheck/: cli.py
